--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build --base=/goit-js-hw-10/",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
+        "gh-pages": "^6.3.0",
         "glob": "^8.1.0",
         "vite": "^4.5.2"
     },
